Terraform-EKS-Istio/kubernetes-manifests/kialiVS.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # Use the Istio ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
    - "ae03f3eb2266e4d958c1ec2ffea94ae4-836058833.eu-west-2.elb.amazonaws.com"  # your ELB DNS name
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: /kiali
      route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: /grafana
      route:
        - destination:
            host: grafana.istio-system.svc.cluster.local
            port:
              number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: /prometheus
      route:
        - destination:
            host: prometheus.istio-system.svc.cluster.local
            port:
              number: 9090
            subset: prometheus-server
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: prometheus
  namespace: istio-system
spec:
  host: prometheus.istio-system.svc.cluster.local  # The Prometheus service name
  subsets:
    - name: prometheus-server
      labels:
        app: prometheus-server  # The label of your Prometheus server container
